# MinecraftClone

./: .gitignore  CMakeLists.txt  CMakeLogic.cmake  ConfigFunctions.cmake  Functions.cmake  LibraryLinking.cmake  ProjectConfig.cmake  README.md  config.txt  main.cpp  minecraft
res/shader/crosshair/: crosshair.glslf  crosshair.glslv
res/shader/line/: line.glslf  line.glslv
res/shader/texture_2d_in_3d/: texture_2d_in_3d.glslf  texture_2d_in_3d.glslv
res/shaders/: main.glslf  main.glslv
res/shaders/crosshair/: crosshair.glslf  crosshair.glslv
res/shaders/texture_2d_in_3d/: texture_2d_in_3d.glslv
src/: main.cpp
src/app/: Application.cpp  Application.h
src/camera/: Camera.cpp  Camera.h
src/engine/camera/: Camera.cpp  Camera.h
src/engine/exception/: MessageException.cpp  MessageException.h
src/engine/graphics/: LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  MeshHeap.cpp  MeshHeap.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VoxelsRenderer.cpp  VoxelsRenderer.h
src/engine/light/: LightMap.cpp  LightMap.h  LightSolver.cpp  LightSolver.h
src/engine/time/: Clock.cpp  Clock.h
src/engine/view/: View.cpp  View.h
src/engine/voxel/: Chunk.cpp  Chunk.h  ChunkHeap.cpp  ChunkHeap.h  Voxel.cpp  Voxel.h
src/engine/window/: Events.cpp  Events.h  Key.h  Window.cpp  Window.h
src/exception/: MessageException.h
src/game/world/: VoxelWorld.cpp  VoxelWorld.h
src/graphics/: Mesh.cpp  Mesh.h  MeshHeap.cpp  MeshHeap.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VoxelsRenderer.cpp  VoxelsRenderer.h
src/headers/: includes.h  typedefs.h
src/time/: Clock.cpp  Clock.h
src/voxel/: Chunk.cpp  Chunk.h  ChunkHeap.cpp  ChunkHeap.h  Voxel.cpp  Voxel.h
src/window/: Window.cpp  Window.h
window/: EventsHandler.cpp  EventsHandler.h  Window.cpp  Window.h
